<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="395dp"
        android:layout_height="220dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            android:layout_width="345dp"
            android:layout_height="190dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="5dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="false">

            <TextView
                android:id="@+id/tvInvite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:text="@string/invite"
                android:textAlignment="textEnd" />

            <LinearLayout
                android:layout_width="276dp"
                android:layout_height="68dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="35dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:text="@string/diago_maradona"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvUserDistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingRight="10dp"
                    android:text="@string/ascochinga_within_80_2km" />


            </LinearLayout>

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="180dp"
                android:layout_height="15dp"

                android:layout_marginLeft="40dp"
                android:layout_marginTop="90dp"
                android:indeterminate="false"
                android:max="50"
                android:outlineSpotShadowColor="#1D2225"
                android:progress="0"
                android:progressDrawable="@drawable/custom_distance_progressbar"
                android:thumb="@color/purple_500"
                android:thumbTint="@color/purple_700" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="120dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSocialType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingEnd="10dp"
                    android:text="@string/friendship_coffee_hangout" />

                <TextView
                    android:id="@+id/tvUDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:text="@string/hi_community_i_am_open_to_new_connections_n" />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/image"
                    android:background="#CCFFFFFF"
                    android:padding="8dp"
                    android:text="@string/this_is_simple_title"
                    android:textColor="#000000" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/ivUserImage"
            android:layout_width="70dp"
            android:layout_height="72dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="53dp"
            android:elevation="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/person_image" />
    </RelativeLayout>

</layout>



